--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -50,6 +50,8 @@ $link-focus-border: $primary;
     width:100px;
     height:100px
 }
+//@import "~vue-form-generator/dist/vfg-core.css";  // optional full css additions
+
 
 // @media (min-width: 768px) {
 //     @-webkit-keyframes fade-in {
