--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,7 +10,7 @@ $twitter-invert: findColorInvert($twitter);
 
 // SETEO VARIABLES POR DEFECTO
 //$navbar-item-active-background-color: #F5F5F5 !default
-$body-background-color: $dark !default
+$body-background-color: $dark !default;
 //$body-color: $white !default
 
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
